--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "main": "server.js",
   "scripts": {
-    "test": "mocha",
+    "test": "NODE_ENV=test mocha --exit",
     "start": "node server.js"
   },
   "repository": {
