--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "knex": "^0.15.2",
+    "nightmare": "^3.0.1",
     "pg": "^7.7.1"
   },
   "devDependencies": {
