--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "countrystatesjs": "0.0.12",
     "express": "^4.16.4",
     "knex": "^0.15.2",
     "nightmare": "^3.0.1",
